--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "daisyui": "^4.6.2"
+    "daisyui": "^4.6.2",
+    "tailwindcss-animated": "^1.0.1"
   }
 }
