Add contact page. Bug fix in the click event of the footer copy email button because when the transition was made from one page to another the event was lost. To solve, the footer section was used using astro:page-load. Add the site part in astro.config.mjs. Eliminate variables that were not used.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,11 @@
   "compilerOptions": {
     "strictNullChecks": true,
     "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@lib/*": ["src/lib/*"],
+      "@content/*": ["src/content/*"]
+    }
   }
 }
